# xinitrc.de

./: .gitignore  LICENCE  LICENSE  README.md  archive.html  archives.html  bower.json  compressJS.sh  contact.html  facts.html  filters.hs  gulpfile.js  htaccess  index.html  lit.bib  manifest.mf  ref.bib  site.hs  springer-lncs.csl  talk-archive.html  talks.html  xinitrcde.cabal
Plugins/: Filters.hs  KeywordReader.hs  LogarithmicTagCloud.hs  Tikz.hs
basic/: about.html
blog/: 2012-12-15-Setting-up-Shop.md  2012-12-17-Let-me-do-the-math.md  2012-12-19-Long-and-winding-road-to-a-responsive-video.md  2012-12-24-As-if-there-werent-enough.md  2012-12-25-I-pack-my-things-and-go.md  2013-01-31-From-outer-space.md  2013-04-05-This-pod-thingy.md  2013-06-17-Resetting-shop.md  2013-06-22-3.26-Lightyears-away.md  2013-07-01-Deep-impact.md  2013-07-08-SIGINT-2013.md  2013-08-01-Activity-monitor.md  2013-10-27-Vectors-everywhere.md  2013-11-03-Running-in-circles.md  2013-11-09-Timely-delivery.md  2013-11-14-Where-in-the-world-is.md  2013-12-01-Late-to-the-party.md  2013-12-08-Everybody-gets-one.md  2013-12-15-You-say-potato.md  2014-01-12-Challenges-ahead.md  2014-01-19-Reduce-to-the-max.md  2014-02-09-Sucker-for-generality.md  2014-02-15-Magic-tricks.md  2014-02-23-Of-rabbits-and-hats.md  2014-03-02-Chinese-linking-rings.md  2016-04-26-Barcamp-Oldenburg.md
css/: _base.css  _base.scss  about.scss  article.scss  base.scss  basehtml.scss  colors.scss  complete.css  complete.min.css  complete.scss  contact.scss  custom.css  fonts.scss  imports.scss  logo.scss  responsive.scss  (+9 more)
(+265 files in other folders)
